--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <!--Upgrade Section-->
         <div class="upgrade-section">
             <div class="upgrades">
-                <div class="click-income">
+                <div class="contu click-income">
                     <label class="lci"  for="">Click income: 10$</label>
                     <input class="button-income button" type="button" value="Buy">
                 </div>
-                <div class="click-income-multiplier">
+                <div class="contu click-income-multiplier">
                     <label class="lcim" for="">Click income multiplier: 100$</label>
                     <input class="button button-income-multiplier" type="button" value="Buy">
                 </div>
-                <div class="passive-income">
+                <div class="contu passive-income">
                     <label class="lpi" for="">Passive income: 5$</label>
                     <input class="button button-passive-income" type="button" value="Buy">
                 </div>
-                <div class="passive-income-speed">
+                <div class="contu passive-income-speed">
                     <label class="lpis" for="">passive income speed: 100$</label>
                     <input class="button button-passive-income-speed" type="button" value="Buy">
                 </div>
