--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!--Upgrade Section-->
         <div class="upgrade-section">
             <div class="upgrades">
+                <h2>Common Upgrades</h2>
                 <div class="contu click-income">
                     <label class="lci"  for="">Click income: 10$</label>
                     <input class="button-income button" type="button" value="Buy">
@@ -25,13 +26,23 @@
                     <label class="lcim" for="">Click income multiplier: 100$</label>
                     <input class="button button-income-multiplier" type="button" value="Buy">
                 </div>
-                <div class="contu passive-income">
-                    <label class="lpi" for="">Passive income: 5$</label>
-                    <input class="button button-passive-income" type="button" value="Buy">
-                </div>
                 <div class="contu passive-income-speed">
                     <label class="lpis" for="">passive income speed: 100$</label>
                     <input class="button button-passive-income-speed" type="button" value="Buy">
+                    <!--PSI Upgrades-->
+                </div>,
+                    <h2>Passive Income Upgrades</h2>
+                <div class="contu passive-income-type-1">
+                    <label class="lpit1" for="">Donbass Miners: 5$</label>
+                    <input class="button button-passive-income-type-1" type="button" value="Buy">
+                </div>
+                <div class="contu passive-income-type-2">
+                    <label class="lpit2" for="">Invest in Roshen: 25$</label>
+                    <input class="button button-passive-income-type-2" type="button" value="Buy">
+                </div>
+                <div class="contu passive-income-type-3">
+                    <label class="lpit3" for="">Buy PrivatBank stock: 100$</label>
+                    <input class="button button-passive-income-type-3" type="button" value="Buy">
                 </div>
             </div>
         </div>
