--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!---Game section--->
         <div class="click-section">
             <p class="value">0</p>
+            <p class="passive-income">Passive income: 0</p>
             <input value="Click" class="main-button" type="button">
         </div>
 
@@ -30,19 +31,19 @@
                     <label class="lpis" for="">passive income speed: 100$</label>
                     <input class="button button-passive-income-speed" type="button" value="Buy">
                     <!--PSI Upgrades-->
-                </div>,
+                </div>
                     <h2>Passive Income Upgrades</h2>
                 <div class="contu passive-income-type-1">
                     <label class="lpit1" for="">Donbass Miners: 5$</label>
-                    <input class="button button-passive-income-type-1" type="button" value="Buy">
+                    <input class="button button-passive-income-type-1" type="button" value="+1$">
                 </div>
                 <div class="contu passive-income-type-2">
                     <label class="lpit2" for="">Invest in Roshen: 25$</label>
-                    <input class="button button-passive-income-type-2" type="button" value="Buy">
+                    <input class="button button-passive-income-type-2" type="button" value="+3$">
                 </div>
                 <div class="contu passive-income-type-3">
                     <label class="lpit3" for="">Buy PrivatBank stock: 100$</label>
-                    <input class="button button-passive-income-type-3" type="button" value="Buy">
+                    <input class="button button-passive-income-type-3" type="button" value="+7$">
                 </div>
             </div>
         </div>
