--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                     <label class="lpit3" for="">Buy PrivatBank stock: 100$</label>
                     <input class="button button-passive-income-type-3" type="button" value="+7$">
                 </div>
+                <div class="contu passive-income-type-4">
+                    <label class="lpit4" for="">Buy one АТБ Маркет: 1000$</label>
+                    <input class="button button-passive-income-type-4" type="button" value="+30$">
+                </div>
             </div>
         </div>
     </main>
